k8s/03-ros2-core.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ros2-core
  namespace: seva-sarathi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ros2-core
  template:
    metadata:
      labels:
        app: ros2-core
    spec:
      hostNetwork: true # Allows DDS UDP Multicast discovery on LAN
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: ros2-node
          image: sevasarathi/ros2-core:latest
          imagePullPolicy: Always
